# CS698G-2019-20-2

./: CMakeLists.txt  README.md  cloudmpi.h  init.sh  main.out  rankallocation.src  run.sh  setup.sh  src.cpp
dump/: test.c
include/static/: cloudmpi.h
results/: data.txt  plot.py
setup/: init.sh  run.sh  setup.sh
src/: cloudmpi.cpp  main.cpp  src.c
